--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0375.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0375.html
@@ -103,7 +103,7 @@
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1794 241 1876 278">
           <span class="alternatives">
-            <ins title="nlp 2.00">135ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -1600,9 +1600,14 @@
             <ins class="alt" title="nlp 1.00">τέλειοι</ins>
           </span>
         </span>
-        <span id="w_306" class="ocr_word" title="bbox 817 2106 917 2159" lang="grc">
+        <span id="w_306_0" class="ocr_word" title="bbox 817 2106 917 2159">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οἷον</ins>
+            <ins class="alt" title="nlp 2.00">(οἶον</ins>
+          </span>
+        </span>
+        <span id="w_306_1" class="ocr_word" title="bbox 817 2106 917 2159">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_307" class="ocr_word" title="bbox 955 2103 1155 2156" lang="grc">
@@ -1628,11 +1633,6 @@
         <span id="w_311" class="ocr_word" title="bbox 1596 2100 1688 2145" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ξύλα</ins>
-          </span>
-        </span>
-        <span id="w_312" class="ocr_word" title="bbox 1723 2114 1833 2140" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">καταγινομένη</ins>
           </span>
         </span>
       </span>
@@ -2061,9 +2061,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 94 2743 1863 2801">
-        <span id="w_397" class="ocr_word" title="bbox 94 2754 180 2789">
+        <span id="w_397_0" class="ocr_word" title="bbox 94 2754 180 2789">
           <span class="alternatives">
-            <ins title="nlp 2.00">1—3</ins>
+            <ins class="alt" title="nlp 2.00">1–3</ins>
+          </span>
+        </span>
+        <span id="w_397_1" class="ocr_word" title="bbox 94 2754 180 2789">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_398" class="ocr_word" title="bbox 207 2756 264 2790" lang="grc">
@@ -2135,12 +2140,6 @@
             <del title="nlp 0.90">om.</del>
           </span>
         </span>
-        <span id="w_411" class="ocr_word" title="bbox 1834 2744 1863 2778">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 93 2803 1781 2858">
         <span id="w_412" class="ocr_word" title="bbox 93 2813 112 2848">
@@ -2172,12 +2171,12 @@
         </span>
         <span id="w_417" class="ocr_word" title="bbox 1127 2809 1146 2842" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">7 τὸ] ἡ Τ</ins>
+            <ins title="nlp 2.00">τὸ] ἡ Τ</ins>
           </span>
         </span>
         <span id="w_418" class="ocr_word" title="bbox 1518 2805 1537 2838" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">9 ὑπῆρχε ΚV</ins>
+            <ins title="nlp 2.00">ὑπῆρχε ΚV</ins>
           </span>
         </span>
       </span>
