--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0376.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0376.html
@@ -2673,7 +2673,7 @@
         </span>
         <span id="w_504" class="ocr_word" title="bbox 1190 3184 1234 3218" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">28—30</ins>
+            <ins title="nlp 2.00">—30</ins>
           </span>
         </span>
         <span id="w_505" class="ocr_word" title="bbox 1354 3197 1463 3230" lang="grc">
