--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0456.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0456.html
@@ -797,9 +797,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 479 1044 2055 1101">
-        <span id="w_152" class="ocr_word" title="bbox 479 1044 601 1086" lang="grc">
+        <span id="w_152_0" class="ocr_word" title="bbox 479 1044 601 1086">
           <span class="alternatives">
-            <ins title="nlp 2.00">πάλιν</ins>
+            <ins class="alt" title="nlp 2.00">Πάλιν</ins>
+          </span>
+        </span>
+        <span id="w_152_1" class="ocr_word" title="bbox 479 1044 601 1086">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_153" class="ocr_word" title="bbox 634 1049 793 1101" lang="grc">
@@ -850,11 +855,6 @@
         <span id="w_162" class="ocr_word" title="bbox 1911 1061 1934 1098" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡ</ins>
-          </span>
-        </span>
-        <span id="w_163" class="ocr_word" title="bbox 1965 1059 2055 1098" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀγαθοῦ</ins>
           </span>
         </span>
       </span>
