--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0315.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0315.html
@@ -92,16 +92,11 @@
         </span>
         <span id="w_14" class="ocr_word" title="bbox 873 403 960 436" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">περι-</ins>
+            <ins title="nlp 2.00">περιστερπᾶς</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 155 450 960 501">
-        <span id="w_15" class="ocr_word" title="bbox 155 467 271 501" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στερᾶς</ins>
-          </span>
-        </span>
         <span id="w_16" class="ocr_word" title="bbox 304 454 320 488" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
@@ -129,16 +124,11 @@
         </span>
         <span id="w_21" class="ocr_word" title="bbox 890 463 960 495" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τρέ-</ins>
+            <ins title="nlp 2.00">τρέφοντες</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 156 509 961 560">
-        <span id="w_22" class="ocr_word" title="bbox 156 525 274 560" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φοντες</ins>
-          </span>
-        </span>
         <span id="w_23" class="ocr_word" title="bbox 311 511 501 557" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">περιστερὰς</ins>
@@ -193,14 +183,14 @@
             <ins class="alt" title="nlp 1.00">στροφὴν</ins>
           </span>
         </span>
-        <span id="w_33" class="ocr_word" title="bbox 762 627 836 669" lang="grc">
+        <span id="w_33_0" class="ocr_word" title="bbox 762 627 836 669">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τὰς</ins>
+            <ins class="alt" title="nlp 2.00">(τὰς</ins>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 876 638 961 671" lang="grc">
+        <span id="w_33_1" class="ocr_word" title="bbox 762 627 836 669">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἰρημένας</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1415,7 +1405,7 @@
       <span class="ocr_line" title="bbox 1032 858 1520 903">
         <span id="w_256" class="ocr_word" title="bbox 1032 859 1296 903" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">*πολύμεσος 243,31.33</ins>
+            <ins title="nlp 2.00">πολύμεσος 243,31.33</ins>
           </span>
         </span>
       </span>
