--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0417.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0417.html
@@ -140,12 +140,7 @@
         </span>
         <span id="w_24" class="ocr_word" title="bbox 1229 322 1330 348" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐστιν</ins>
-          </span>
-        </span>
-        <span id="w_25" class="ocr_word" title="bbox 1344 324 1352 333">
-          <span class="alternatives">
-            <ins title="nlp 2.00">·</ins>
+            <ins class="alt" title="nlp 2.00">ἐστιν·</ins>
           </span>
         </span>
         <span id="w_26" class="ocr_word" title="bbox 1387 325 1410 362" lang="grc">
@@ -1640,7 +1635,7 @@
         </span>
         <span id="w_316" class="ocr_word" title="bbox 557 2040 675 2094" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὕτη</ins>
+            <ins title="nlp 2.00">(αὕτη</ins>
           </span>
         </span>
         <span id="w_317" class="ocr_word" title="bbox 699 2055 776 2094" lang="grc">
@@ -1861,7 +1856,7 @@
         </span>
         <span id="w_359" class="ocr_word" title="bbox 1500 2241 1545 2295" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἢ</ins>
+            <ins title="nlp 2.00">(ἢ</ins>
           </span>
         </span>
         <span id="w_360" class="ocr_word" title="bbox 1577 2240 1648 2294" lang="grc">
@@ -1918,7 +1913,7 @@
         </span>
         <span id="w_370" class="ocr_word" title="bbox 1478 2312 1576 2363" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔστι</ins>
+            <ins title="nlp 2.00">(ἔστι</ins>
           </span>
         </span>
         <span id="w_371" class="ocr_word" title="bbox 1613 2309 1683 2363" lang="grc">
@@ -2262,7 +2257,7 @@
       <span class="ocr_line" title="bbox 89 2860 1911 2912">
         <span id="w_439" class="ocr_word" title="bbox 89 2868 111 2900" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">4 ὥσπερ—συνάπτονται</ins>
+            <ins title="nlp 2.00">ὥσπερ—συνάπτονται</ins>
           </span>
         </span>
         <span id="w_440" class="ocr_word" title="bbox 542 2868 589 2910">
@@ -2341,9 +2336,14 @@
             <ins title="nlp 2.00">corr.</ins>
           </span>
         </span>
-        <span id="w_454" class="ocr_word" title="bbox 192 2927 238 2960">
+        <span id="w_454_0" class="ocr_word" title="bbox 192 2927 238 2960">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 1</ins>
+            <ins class="alt" title="nlp 2.00">V1</ins>
+          </span>
+        </span>
+        <span id="w_454_1" class="ocr_word" title="bbox 192 2927 238 2960">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_455" class="ocr_word" title="bbox 405 2927 421 2961" lang="grc">
@@ -2408,11 +2408,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_467" class="ocr_word" title="bbox 1833 2917 1865 2950" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Κ</ins>
           </span>
         </span>
       </span>
