--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0271.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0271.html
@@ -500,9 +500,14 @@
             <ins title="nlp 2.00">ὠχριάσαντος</ins>
           </span>
         </span>
-        <span id="w_93" class="ocr_word" title="bbox 974 703 1205 742" lang="grc">
+        <span id="w_93_0" class="ocr_word" title="bbox 974 703 1205 742">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαταφεύγει</ins>
+            <ins class="alt" title="nlp 2.00">καταφεύγει</ins>
+          </span>
+        </span>
+        <span id="w_93_1" class="ocr_word" title="bbox 974 703 1205 742">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_94" class="ocr_word" title="bbox 1242 705 1283 728" lang="grc">
@@ -523,11 +528,6 @@
         <span id="w_97" class="ocr_word" title="bbox 1540 705 1607 744" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
-          </span>
-        </span>
-        <span id="w_98" class="ocr_word" title="bbox 1638 705 1807 739" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καρδίαν,</ins>
           </span>
         </span>
       </span>
@@ -609,14 +609,24 @@
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_114_0" class="ocr_word" title="bbox 240 830 302 868">
+        <span id="w_114_0_0" class="ocr_word" title="bbox 240 830 302 868">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_114_1" class="ocr_word" title="bbox 240 830 302 868">
+        <span id="w_114_0_1" class="ocr_word" title="bbox 240 830 302 868">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χαρδιουλχούμενα</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_114_1_0" class="ocr_word" title="bbox 240 830 302 868">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καρδιουλκούμενα</ins>
+          </span>
+        </span>
+        <span id="w_114_1_1" class="ocr_word" title="bbox 240 830 302 868">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_115" class="ocr_word" title="bbox 720 829 790 879">
@@ -652,16 +662,6 @@
         <span id="w_121" class="ocr_word" title="bbox 1566 843 1619 866" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰς</ins>
-          </span>
-        </span>
-        <span id="w_122" class="ocr_word" title="bbox 1650 829 1736 867" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅλον</ins>
-          </span>
-        </span>
-        <span id="w_123" class="ocr_word" title="bbox 1769 844 1810 868" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
       </span>
@@ -1730,14 +1730,14 @@
             <ins class="alt" title="nlp 2.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_328" class="ocr_word" title="bbox 683 2336 899 2391">
+        <span id="w_328_0" class="ocr_word" title="bbox 683 2336 899 2391">
           <span class="alternatives">
-            <ins title="nlp 2.00">χρώμαα</ins>
+            <ins class="alt" title="nlp 2.00">χρώματα</ins>
           </span>
         </span>
-        <span id="w_329" class="ocr_word" title="bbox 928 2351 1130 2390">
+        <span id="w_328_1" class="ocr_word" title="bbox 683 2336 899 2391">
           <span class="alternatives">
-            <ins title="nlp 2.00">παθητιχὰς</ins>
+            <ins class="alt" title="nlp 2.00">παθητικὰς</ins>
           </span>
         </span>
         <span id="w_330_0" class="ocr_word" title="bbox 1154 2350 1262 2383">
@@ -1777,29 +1777,29 @@
             <ins class="alt" title="nlp 2.00">αὐτὰ</ins>
           </span>
         </span>
-        <span id="w_335_1" class="ocr_word" title="bbox 136 2423 231 2448">
+        <span id="w_335_1_0" class="ocr_word" title="bbox 136 2423 231 2448">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χατασχευάζει</ins>
+            <ins class="alt" title="nlp 2.00">κατασκευάξει</ins>
           </span>
         </span>
-        <span id="w_336" class="ocr_word" title="bbox 262 2408 539 2454">
+        <span id="w_335_1_1" class="ocr_word" title="bbox 136 2423 231 2448">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_337" class="ocr_word" title="bbox 569 2409 632 2448">
+        <span id="w_337_0" class="ocr_word" title="bbox 569 2409 632 2448">
           <span class="alternatives">
-            <ins title="nlp 2.00">δείχνυσιν</ins>
+            <ins class="alt" title="nlp 2.00">δείκνυσιν</ins>
+          </span>
+        </span>
+        <span id="w_337_1" class="ocr_word" title="bbox 569 2409 632 2448">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_339" class="ocr_word" title="bbox 883 2406 1005 2446">
           <span class="alternatives">
             <ins title="nlp 2.00">οὓτως</ins>
-          </span>
-        </span>
-        <span id="w_340" class="ocr_word" title="bbox 1037 2420 1190 2458">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἔχοντα.</ins>
           </span>
         </span>
       </span>
