--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0457.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0457.html
@@ -115,7 +115,7 @@
         </span>
         <span id="w_19" class="ocr_word" title="bbox 1258 244 1388 297" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐδὲν</ins>
+            <ins title="nlp 2.00">(οὐδὲν</ins>
           </span>
         </span>
         <span id="w_20" class="ocr_word" title="bbox 1425 261 1496 300" lang="grc">
