--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0316.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0316.html
@@ -1288,29 +1288,29 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1271 890 2145 936">
-        <span id="w_229" class="ocr_word" title="bbox 1271 890 1555 935" lang="grc">
+        <span id="w_229_0" class="ocr_word" title="bbox 1271 890 1555 935">
           <span class="alternatives">
-            <ins title="nlp 2.00">*πυκτικότης</ins>
+            <ins class="alt" title="nlp 2.00">*πυκτικότης</ins>
           </span>
         </span>
-        <span id="w_230" class="ocr_word" title="bbox 1590 890 1668 936" lang="grc">
+        <span id="w_229_1" class="ocr_word" title="bbox 1271 890 1555 935">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὐχ</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_230_0" class="ocr_word" title="bbox 1590 890 1668 936">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">(οὐχ</ins>
+          </span>
+        </span>
+        <span id="w_230_1" class="ocr_word" title="bbox 1590 890 1668 936">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_231" class="ocr_word" title="bbox 1695 893 1843 935" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εὕρηται)</ins>
-          </span>
-        </span>
-        <span id="w_232" class="ocr_word" title="bbox 1871 891 1996 933">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">225,12</ins>
-          </span>
-        </span>
-        <span id="w_233" class="ocr_word" title="bbox 2023 892 2145 935">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">229,21</ins>
           </span>
         </span>
       </span>
@@ -1506,7 +1506,7 @@
         </span>
         <span id="w_269" class="ocr_word" title="bbox 2088 1481 2141 1523" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
+            <ins title="nlp 2.00">60,</ins>
           </span>
         </span>
       </span>
@@ -1890,9 +1890,14 @@
             <ins class="alt" title="nlp 1.00">ποσοῦ</ins>
           </span>
         </span>
-        <span id="w_339" class="ocr_word" title="bbox 1730 2684 1806 2724" lang="grc">
+        <span id="w_339_0" class="ocr_word" title="bbox 1730 2684 1806 2724">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὐκ</ins>
+            <ins class="alt" title="nlp 2.00">(οὐκ</ins>
+          </span>
+        </span>
+        <span id="w_339_1" class="ocr_word" title="bbox 1730 2684 1806 2724">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_340" class="ocr_word" title="bbox 1825 2682 1908 2720" lang="grc">
@@ -1903,11 +1908,6 @@
         <span id="w_341" class="ocr_word" title="bbox 1935 2686 1993 2716">
           <span class="alternatives">
             <ins title="nlp 2.00">τοῦ </ins>
-          </span>
-        </span>
-        <span id="w_342" class="ocr_word" title="bbox 2012 2682 2128 2724">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ποσοῦ)</ins>
           </span>
         </span>
       </span>
