--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0418.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0418.html
@@ -2658,7 +2658,7 @@
         </span>
         <span id="w_512" class="ocr_word" title="bbox 1295 3153 1347 3197" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins title="nlp 2.00">(τὸ</ins>
           </span>
         </span>
         <span id="w_513" class="ocr_word" title="bbox 1373 3154 1529 3199" lang="grc">
@@ -2734,9 +2734,14 @@
             <del title="nlp 0.90">suppl.</del>
           </span>
         </span>
-        <span id="w_526" class="ocr_word" title="bbox 1124 3212 1169 3246">
+        <span id="w_526_0" class="ocr_word" title="bbox 1124 3212 1169 3246">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 1</ins>
+            <ins class="alt" title="nlp 2.00">V1</ins>
+          </span>
+        </span>
+        <span id="w_526_1" class="ocr_word" title="bbox 1124 3212 1169 3246">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_527" class="ocr_word" title="bbox 1362 3211 1406 3246">
@@ -2753,12 +2758,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_530" class="ocr_word" title="bbox 1571 3210 1598 3244">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">T</ins>
-            <del title="nlp 0.90">T</del>
           </span>
         </span>
       </span>
