--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0270.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0270.html
@@ -715,9 +715,14 @@
             <ins title="nlp 1.00" class="alt">γὰρ</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 1025 1113 1224 1164" class="ocr_word" id="w_135">
+        <span id="w_135_0" class="ocr_word" title="bbox 1025 1113 1224 1164">
           <span class="alternatives">
-            <ins title="nlp 2.00">παθητιχὴ</ins>
+            <ins class="alt" title="nlp 2.00">παθητικὴ</ins>
+          </span>
+        </span>
+        <span id="w_135_1" class="ocr_word" title="bbox 1025 1113 1224 1164">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 1272 1125 1432 1163" class="ocr_word" id="w_136">
@@ -748,11 +753,6 @@
         <span lang="grc" title="bbox 2002 1124 2026 1162" class="ocr_word" id="w_141">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">ἡ</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 2065 1124 2104 1148" class="ocr_word" id="w_142">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">ἐν</ins>
           </span>
         </span>
       </span>
@@ -1494,9 +1494,9 @@
             <ins title="nlp 1.00" class="alt">δὲ</ins>
           </span>
         </span>
-        <span title="bbox 2025 1939 2110 1978" class="ocr_word" id="w_289">
+        <span id="w_289_0" class="ocr_word" title="bbox 2025 1939 2110 1978">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἑχάτερον</ins>
+            <ins class="alt" title="nlp 2.00">ἑκάτερον</ins>
           </span>
         </span>
       </span>
@@ -1645,9 +1645,14 @@
             <ins title="nlp 1.00" class="alt">αἱ</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 1413 2162 1674 2201" class="ocr_word" id="w_319">
+        <span id="w_319_0" class="ocr_word" title="bbox 1413 2162 1674 2201">
           <span class="alternatives">
-            <ins title="nlp 2.00">προχείμεναι,</ins>
+            <ins class="alt" title="nlp 2.00">προκείμεναι,</ins>
+          </span>
+        </span>
+        <span id="w_319_1" class="ocr_word" title="bbox 1413 2162 1674 2201">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 1712 2146 1752 2186" class="ocr_word" id="w_320">
@@ -1658,11 +1663,6 @@
         <span lang="grc" title="bbox 1785 2149 1837 2186" class="ocr_word" id="w_321">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">ὡς</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 1867 2146 2109 2200" class="ocr_word" id="w_322">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">συμβεβηκὸς</ins>
           </span>
         </span>
       </span>
@@ -2431,9 +2431,14 @@
             <ins title="nlp 1.00" class="alt">ἡ</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 466 3127 658 3161" class="ocr_word" id="w_471">
+        <span id="w_471_0" class="ocr_word" title="bbox 466 3127 658 3161">
           <span class="alternatives">
-            <ins title="nlp 2.00">γλυχένεται</ins>
+            <ins class="alt" title="nlp 2.00">γλυκένεται</ins>
+          </span>
+        </span>
+        <span id="w_471_1" class="ocr_word" title="bbox 466 3127 658 3161">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_472_0" class="ocr_word" title="bbox 677 3118 756 3159">
@@ -2483,12 +2488,6 @@
             <ins title="nlp 2.00">μέντι</ins>
           </span>
         </span>
-        <span title="bbox 2104 3115 2129 3147" class="ocr_word" id="w_480">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">H</ins>
-            <del title="nlp 0.90">H</del>
-          </span>
-        </span>
       </span>
       <span title="bbox 355 3175 1290 3221" class="ocr_line" id="w_488">
         <span title="bbox 355 3175 399 3209" class="ocr_word" id="w_481">
@@ -2506,9 +2505,14 @@
             <ins title="nlp 2.00">—</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 547 3186 740 3220" class="ocr_word" id="w_484">
+        <span id="w_484_0" class="ocr_word" title="bbox 547 3186 740 3220">
           <span class="alternatives">
-            <ins title="nlp 2.00">προσχέρων</ins>
+            <ins class="alt" title="nlp 2.00">προσκέρων</ins>
+          </span>
+        </span>
+        <span id="w_484_1" class="ocr_word" title="bbox 547 3186 740 3220">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span title="bbox 774 3177 849 3216" class="ocr_word" id="w_485">
@@ -2525,11 +2529,6 @@
           <span class="alternatives">
             <ins title="nlp 0.10" class="alt">suppl.</ins>
             <del title="nlp 0.90">suppl.</del>
-          </span>
-        </span>
-        <span id="w_488" class="ocr_word" title="bbox 1248 3176 1290 3209">
-          <span class="alternatives">
-            <ins title="nlp 2.00">P2</ins>
           </span>
         </span>
       </span>
