--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0458.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0458.html
@@ -771,8 +771,7 @@
       <span class="ocr_line" title="bbox 396 1251 2083 1311">
         <span id="w_145" class="ocr_word" title="bbox 396 1278 430 1311">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">p.</ins>
-            <del title="nlp 0.90">p.</del>
+            <ins title="nlp 2.00">p.</ins>
           </span>
         </span>
         <span id="w_146" class="ocr_word" title="bbox 454 1266 506 1308">
@@ -825,14 +824,14 @@
             <ins class="alt" title="nlp 1.00">ἴδιον</ins>
           </span>
         </span>
-        <span id="w_156_0" class="ocr_word" title="bbox 1938 1269 2013 1293">
+        <span id="w_156_0_0" class="ocr_word" title="bbox 1938 1269 2013 1293">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_156_1" class="ocr_word" title="bbox 1938 1269 2013 1293">
+        <span id="w_156_0_1" class="ocr_word" title="bbox 1938 1269 2013 1293">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">τί</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -878,8 +877,7 @@
       <span class="ocr_line" title="bbox 397 1601 2086 1661">
         <span id="w_164" class="ocr_word" title="bbox 397 1629 429 1661">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">p.</ins>
-            <del title="nlp 0.90">p.</del>
+            <ins title="nlp 2.00">p.</ins>
           </span>
         </span>
         <span id="w_165" class="ocr_word" title="bbox 453 1615 505 1650">
@@ -961,12 +959,12 @@
         </span>
         <span id="w_180" class="ocr_word" title="bbox 1129 1684 1371 1726" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χρησίμης</ins>
+            <ins title="nlp 2.00">χρησίμης οὔσης τῆς τούτων</ins>
           </span>
         </span>
-        <span id="w_181" class="ocr_word" title="bbox 1403 1669 1547 1725" lang="grc">
+        <span id="w_181_0" class="ocr_word" title="bbox 1403 1669 1547 1725">
           <span class="alternatives">
-            <ins title="nlp 2.00">οὔσηςτῆςτούτωνθεωρίς.</ins>
+            <ins class="alt" title="nlp 2.00">θεωρίας.</ins>
           </span>
         </span>
       </span>
@@ -2178,14 +2176,14 @@
             <ins title="nlp 2.00">V</ins>
           </span>
         </span>
-        <span id="w_413_0" class="ocr_word" title="bbox 1951 2997 2008 3029">
+        <span id="w_413_0_0" class="ocr_word" title="bbox 1951 2997 2008 3029">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_413_1" class="ocr_word" title="bbox 1951 2997 2008 3029">
+        <span id="w_413_0_1" class="ocr_word" title="bbox 1951 2997 2008 3029">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἀσώμ.]</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
