--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0419.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0419.html
@@ -398,7 +398,7 @@
         </span>
         <span id="w_75" class="ocr_word" title="bbox 768 586 853 639" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_76" class="ocr_word" title="bbox 884 601 954 638" lang="grc">
@@ -512,7 +512,7 @@
         </span>
         <span id="w_97" class="ocr_word" title="bbox 387 726 470 779" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_98" class="ocr_word" title="bbox 507 741 577 779" lang="grc">
@@ -1199,7 +1199,7 @@
         </span>
         <span id="w_230" class="ocr_word" title="bbox 674 1483 781 1538" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔχει</ins>
+            <ins title="nlp 2.00">(ἔχει</ins>
           </span>
         </span>
         <span id="w_231" class="ocr_word" title="bbox 811 1482 880 1536" lang="grc">
@@ -2390,8 +2390,7 @@
       <span class="ocr_line" title="bbox 83 2913 1897 2973">
         <span id="w_455" class="ocr_word" title="bbox 83 2941 146 2965">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cm.</ins>
-            <del title="nlp 0.90">cm.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_456" class="ocr_word" title="bbox 167 2933 192 2965">
