--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0317.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0317.html
@@ -770,7 +770,7 @@
         </span>
         <span id="w_136" class="ocr_word" title="bbox 330 2371 384 2415" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὐ</ins>
+            <ins title="nlp 2.00">οὐ</ins>
           </span>
         </span>
         <span id="w_137" class="ocr_word" title="bbox 417 2384 630 2417" lang="grc">
@@ -1044,7 +1044,7 @@
       <span class="ocr_line" title="bbox 79 3132 943 3179">
         <span id="w_185" class="ocr_word" title="bbox 79 3142 281 3179">
           <span class="alternatives">
-            <ins title="nlp 2.00">]στοιχεῖον</ins>
+            <ins title="nlp 2.00">στοιχεῖον</ins>
           </span>
         </span>
         <span id="w_186" class="ocr_word" title="bbox 301 3133 379 3174">
@@ -1146,9 +1146,9 @@
             <del title="nlp 0.90">multitudo</del>
           </span>
         </span>
-        <span id="w_204" class="ocr_word" title="bbox 1693 314 1893 363" lang="grc">
+        <span id="w_204_0" class="ocr_word" title="bbox 1693 314 1893 363">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Ἀρχιγένης</ins>
+            <ins class="alt" title="nlp 2.00">(Ἀρχιγένης</ins>
           </span>
         </span>
       </span>
@@ -1422,7 +1422,7 @@
         </span>
         <span id="w_253" class="ocr_word" title="bbox 1874 1136 1891 1181" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
+            <ins title="nlp 2.00">ἢ</ins>
           </span>
         </span>
       </span>
@@ -1763,7 +1763,7 @@
         </span>
         <span id="w_315" class="ocr_word" title="bbox 1582 1958 1626 1998" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οἱ </ins>
+            <ins title="nlp 2.00">οἱ </ins>
           </span>
         </span>
         <span id="w_316" class="ocr_word" title="bbox 1663 1953 1833 1997" lang="grc">
