--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0269.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0269.html
@@ -114,9 +114,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 915 366 1094 404">
-        <span id="w_20" class="ocr_word" title="bbox 915 366 1094 404" lang="grc">
+        <span id="w_20_0" class="ocr_word" title="bbox 915 366 1094 404">
           <span class="alternatives">
-            <ins title="nlp 2.00">δρομιχουσ.</ins>
+            <ins class="alt" title="nlp 2.00">δρομικους.</ins>
           </span>
         </span>
       </span>
@@ -1322,9 +1322,9 @@
             <ins class="alt" title="nlp 1.00">ἕκτον</ins>
           </span>
         </span>
-        <span id="w_260" class="ocr_word" title="bbox 1722 1844 1837 1882" lang="grc">
+        <span id="w_260_0" class="ocr_word" title="bbox 1722 1844 1837 1882">
           <span class="alternatives">
-            <ins title="nlp 2.00">χεφάλαιον</ins>
+            <ins class="alt" title="nlp 2.00">κεφάλαιον</ins>
           </span>
         </span>
       </span>
@@ -1510,9 +1510,14 @@
             <ins class="alt" title="nlp 1.00">ἑκτόν</ins>
           </span>
         </span>
-        <span id="w_298" class="ocr_word" title="bbox 394 2114 681 2168" lang="grc">
+        <span id="w_298_0" class="ocr_word" title="bbox 394 2114 681 2168">
           <span class="alternatives">
-            <ins title="nlp 2.00">γραμματιχὴν</ins>
+            <ins class="alt" title="nlp 2.00">(γραμματικὴν</ins>
+          </span>
+        </span>
+        <span id="w_298_1" class="ocr_word" title="bbox 394 2114 681 2168">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_299" class="ocr_word" title="bbox 720 2113 792 2167" lang="grc">
@@ -1543,11 +1548,6 @@
         <span id="w_304" class="ocr_word" title="bbox 1571 2120 1612 2146" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
-          </span>
-        </span>
-        <span id="w_305" class="ocr_word" title="bbox 1652 2119 1835 2145" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">οὐδέποτε</ins>
           </span>
         </span>
       </span>
