--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0459.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0459.html
@@ -1935,9 +1935,14 @@
             <ins class="alt" title="nlp 1.00">οἷον</ins>
           </span>
         </span>
-        <span id="w_372" class="ocr_word" title="bbox 284 2356 496 2411">
+        <span id="w_372_0" class="ocr_word" title="bbox 284 2356 496 2411">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾ Σωχράτης</ins>
+            <ins class="alt" title="nlp 2.00">‘Σωκράτης</ins>
+          </span>
+        </span>
+        <span id="w_372_1" class="ocr_word" title="bbox 284 2356 496 2411">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_373" class="ocr_word" title="bbox 517 2360 720 2411" lang="grc">
@@ -1973,11 +1978,6 @@
         <span id="w_379" class="ocr_word" title="bbox 1538 2373 1579 2396" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_380" class="ocr_word" title="bbox 1626 2356 1837 2412">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾ Σωχράτης</ins>
           </span>
         </span>
       </span>
@@ -2027,9 +2027,14 @@
             <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_390" class="ocr_word" title="bbox 1176 2426 1421 2481" lang="grc">
+        <span id="w_390_0" class="ocr_word" title="bbox 1176 2426 1421 2481">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾ Σωχράτης’</ins>
+            <ins class="alt" title="nlp 2.00">‘Σωκράτης’</ins>
+          </span>
+        </span>
+        <span id="w_390_1" class="ocr_word" title="bbox 1176 2426 1421 2481">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_391" class="ocr_word" title="bbox 1458 2428 1580 2466" lang="grc">
@@ -2045,11 +2050,6 @@
         <span id="w_393" class="ocr_word" title="bbox 1727 2443 1768 2466" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_394" class="ocr_word" title="bbox 1801 2428 1842 2466" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
       </span>
@@ -2596,9 +2596,14 @@
             <ins class="alt" title="nlp 1.00">αἱ</ins>
           </span>
         </span>
-        <span id="w_495" class="ocr_word" title="bbox 220 3017 338 3051" lang="grc">
+        <span id="w_495_0" class="ocr_word" title="bbox 220 3017 338 3051">
           <span class="alternatives">
-            <ins title="nlp 2.00">τροφαὶ—χαρπῶν</ins>
+            <ins class="alt" title="nlp 2.00">τροφαὶ—καρπῶν</ins>
+          </span>
+        </span>
+        <span id="w_495_1" class="ocr_word" title="bbox 220 3017 338 3051">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_496" class="ocr_word" title="bbox 553 3018 619 3040">
@@ -2660,11 +2665,6 @@
             <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
-        <span id="w_507" class="ocr_word" title="bbox 1787 3015 1908 3050" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φυσικὴ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 92 3062 1909 3111">
         <span id="w_508" class="ocr_word" title="bbox 92 3062 112 3108" lang="grc">
@@ -2672,9 +2672,14 @@
             <ins class="alt" title="nlp 1.00">ἢ</ins>
           </span>
         </span>
-        <span id="w_509" class="ocr_word" title="bbox 139 3063 256 3110" lang="grc">
+        <span id="w_509_0" class="ocr_word" title="bbox 139 3063 256 3110">
           <span class="alternatives">
-            <ins title="nlp 2.00">λογιχή</ins>
+            <ins class="alt" title="nlp 2.00">λογική</ins>
+          </span>
+        </span>
+        <span id="w_509_1" class="ocr_word" title="bbox 139 3063 256 3110">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_510" class="ocr_word" title="bbox 284 3065 328 3098" lang="grc">
@@ -2742,11 +2747,6 @@
         <span id="w_522" class="ocr_word" title="bbox 1754 3063 1798 3097">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">30</ins>
-          </span>
-        </span>
-        <span id="w_523" class="ocr_word" title="bbox 1824 3063 1909 3097" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐστιν</ins>
           </span>
         </span>
       </span>
