--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0318.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0318.html
@@ -528,19 +528,19 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 320 1689 873 1735">
-        <span id="w_92" class="ocr_word" title="bbox 320 1691 483 1726" lang="grc">
+        <span id="w_92_0" class="ocr_word" title="bbox 320 1691 483 1726">
           <span class="alternatives">
-            <ins title="nlp 2.00">*συοῦν.</ins>
+            <ins class="alt" title="nlp 2.00">*συοῦν.</ins>
+          </span>
+        </span>
+        <span id="w_92_1" class="ocr_word" title="bbox 320 1691 483 1726">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_93" class="ocr_word" title="bbox 534 1689 720 1728" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">συωθέντες</ins>
-          </span>
-        </span>
-        <span id="w_94" class="ocr_word" title="bbox 749 1690 873 1735">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">119,22</ins>
           </span>
         </span>
       </span>
@@ -1690,8 +1690,7 @@
         </span>
         <span id="w_299" class="ocr_word" title="bbox 2122 2181 2150 2202">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ei</ins>
-            <del title="nlp 0.90">ei</del>
+            <ins title="nlp 2.00">εἰ</ins>
           </span>
         </span>
       </span>
