--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0420.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0420.html
@@ -2118,9 +2118,9 @@
             <ins title="nlp 2.00">ἄκεναν</ins>
           </span>
         </span>
-        <span id="w_409" class="ocr_word" title="bbox 1953 2751 1999 2784">
+        <span id="w_409_0" class="ocr_word" title="bbox 1953 2751 1999 2784">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 1</ins>
+            <ins class="alt" title="nlp 2.00">V1</ins>
           </span>
         </span>
       </span>
@@ -2142,8 +2142,7 @@
         </span>
         <span id="w_413" class="ocr_word" title="bbox 586 2813 629 2845">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
+            <ins title="nlp 2.00">V1</ins>
           </span>
         </span>
         <span id="w_414" class="ocr_word" title="bbox 657 2810 742 2855">
@@ -2784,9 +2783,9 @@
             <ins class="alt" title="nlp 1.00">φασιν</ins>
           </span>
         </span>
-        <span id="w_529" class="ocr_word" title="bbox 2136 3219 2180 3253">
+        <span id="w_529_0" class="ocr_word" title="bbox 2136 3219 2180 3253">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 1</ins>
+            <ins class="alt" title="nlp 2.00">V1</ins>
           </span>
         </span>
       </span>
