--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0268.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0268.html
@@ -421,7 +421,7 @@
         </span>
         <span id="w_78_0" class="ocr_word" title="bbox 1603 622 1679 679">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἕν&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_78_1" class="ocr_word" title="bbox 1603 622 1679 679">
@@ -1066,9 +1066,14 @@
             <ins title="nlp 1.00" class="alt">φύσει</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 932 1387 1183 1443" class="ocr_word" id="w_204">
+        <span id="w_204_0" class="ocr_word" title="bbox 932 1387 1183 1443">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀχράτητον᾿,</ins>
+            <ins class="alt" title="nlp 2.00">ἀκράτητον’,</ins>
+          </span>
+        </span>
+        <span id="w_204_1" class="ocr_word" title="bbox 932 1387 1183 1443">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 1217 1390 1304 1443" class="ocr_word" id="w_205">
@@ -1106,11 +1111,6 @@
             <ins title="nlp 1.00" class="alt">τι</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 2011 1388 2075 1428" class="ocr_word" id="w_212">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">καὶ</ins>
-          </span>
-        </span>
       </span>
       <span title="bbox 388 1455 2075 1512" class="ocr_line">
         <span lang="grc" title="bbox 388 1474 430 1498" class="ocr_word" id="w_213">
@@ -1123,9 +1123,14 @@
             <ins title="nlp 1.00" class="alt">τραφῆναι</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 698 1455 861 1508" class="ocr_word" id="w_215">
+        <span id="w_215_0" class="ocr_word" title="bbox 698 1455 861 1508">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαλῶς᾿</ins>
+            <ins class="alt" title="nlp 2.00">καλῶς’,</ins>
+          </span>
+        </span>
+        <span id="w_215_1" class="ocr_word" title="bbox 698 1455 861 1508">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 909 1459 972 1498" class="ocr_word" id="w_216">
@@ -1156,11 +1161,6 @@
         <span lang="grc" title="bbox 1828 1457 1923 1498" class="ocr_word" id="w_221">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">εἶναι</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 1962 1459 2075 1511" class="ocr_word" id="w_222">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">λέγει,</ins>
           </span>
         </span>
       </span>
@@ -1614,9 +1614,14 @@
             <ins title="nlp 1.00" class="alt">πρῶτον</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 1070 2018 1398 2065" class="ocr_word" id="w_310">
+        <span id="w_310_0" class="ocr_word" title="bbox 1070 2018 1398 2065">
           <span class="alternatives">
-            <ins title="nlp 2.00">δυσχολίνουσιν,</ins>
+            <ins class="alt" title="nlp 2.00">δυσκολαίνουσιν,</ins>
+          </span>
+        </span>
+        <span id="w_310_1" class="ocr_word" title="bbox 1070 2018 1398 2065">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 1417 2032 1551 2058" class="ocr_word" id="w_311">
@@ -1627,11 +1632,6 @@
         <span lang="grc" title="bbox 1568 2030 1862 2071" class="ocr_word" id="w_312">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">ἐπιτηδειότητα</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 1878 2015 2072 2071" class="ocr_word" id="w_313">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">φέρουσιν,</ins>
           </span>
         </span>
       </span>
