--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0319.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0319.html
@@ -1369,16 +1369,11 @@
         </span>
         <span lang="grc" title="bbox 1817 710 1895 731" class="ocr_word" id="w_243">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">κατ-</ins>
+            <ins title="nlp 2.00">κατηγοροςυμενον</ins>
           </span>
         </span>
       </span>
       <span title="bbox 1091 754 1895 800" class="ocr_line">
-        <span lang="grc" title="bbox 1091 754 1318 800" class="ocr_word" id="w_244">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">ηγορούμενον</ins>
-          </span>
-        </span>
         <span title="bbox 1337 754 1439 796" class="ocr_word" id="w_245">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">48,33</ins>
@@ -1412,9 +1407,14 @@
         </span>
       </span>
       <span title="bbox 1090 810 1896 857" class="ocr_line">
-        <span lang="grc" title="bbox 1276 812 1464 855" class="ocr_word" id="w_252">
+        <span id="w_252_0" class="ocr_word" title="bbox 1276 812 1464 855">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καθόλου),</ins>
+            <ins class="alt" title="nlp 2.00">(καθόλου),</ins>
+          </span>
+        </span>
+        <span id="w_252_1" class="ocr_word" title="bbox 1276 812 1464 855">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 1497 825 1534 846" class="ocr_word" id="w_253">
@@ -1427,16 +1427,16 @@
             <ins title="nlp 1.00" class="alt">καθ’</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 1678 825 1896 857" class="ocr_word" id="w_255">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">ὑποκειμένου</ins>
-          </span>
-        </span>
       </span>
       <span title="bbox 1090 871 1896 918" class="ocr_line">
-        <span lang="grc" title="bbox 1090 871 1273 914" class="ocr_word" id="w_256">
+        <span id="w_256_0" class="ocr_word" title="bbox 1090 871 1273 914">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">μερικόν),</ins>
+            <ins class="alt" title="nlp 2.00">(μερικόν),</ins>
+          </span>
+        </span>
+        <span id="w_256_1" class="ocr_word" title="bbox 1090 871 1273 914">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 1312 883 1345 904" class="ocr_word" id="w_257">
@@ -1447,11 +1447,6 @@
         <span lang="grc" title="bbox 1390 872 1599 915" class="ocr_word" id="w_258">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">ὑποκειμένῳ</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 1643 872 1896 918" class="ocr_word" id="w_259">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">συμβεβηκός),</ins>
           </span>
         </span>
       </span>
@@ -1593,7 +1588,7 @@
         </span>
         <span lang="grc" title="bbox 1786 1165 1893 1212" class="ocr_word" id="w_285">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Άριστοτέλους</ins>
+            <ins title="nlp 2.00">Άριστοτέλους</ins>
           </span>
         </span>
       </span>
