--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0460.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0460.html
@@ -433,9 +433,9 @@
             <ins class="alt" title="nlp 1.00">πῶς</ins>
           </span>
         </span>
-        <span id="w_81" class="ocr_word" title="bbox 1888 568 2072 609" lang="grc">
+        <span id="w_81_0" class="ocr_word" title="bbox 1888 568 2072 609">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατηντήσαμεν</ins>
+            <ins class="alt" title="nlp 2.00">κατηντήσαμεν</ins>
           </span>
         </span>
       </span>
@@ -753,9 +753,9 @@
             <ins class="alt" title="nlp 1.00">τὰς</ins>
           </span>
         </span>
-        <span id="w_144" class="ocr_word" title="bbox 1991 902 2077 944" lang="grc">
+        <span id="w_144_0" class="ocr_word" title="bbox 1991 902 2077 944">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀναλυτι8χά;</ins>
+            <ins class="alt" title="nlp 2.00">ἀναλυτικάς;</ins>
           </span>
         </span>
       </span>
@@ -1067,8 +1067,7 @@
       <span class="ocr_line" title="bbox 395 1322 2143 1384">
         <span id="w_206" class="ocr_word" title="bbox 529 1330 534 1384">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
+            <ins title="nlp 2.00">|</ins>
           </span>
         </span>
         <span id="w_207" class="ocr_word" title="bbox 562 1345 623 1371" lang="grc">
@@ -1180,9 +1179,14 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_228" class="ocr_word" title="bbox 465 1468 714 1511" lang="grc">
+        <span id="w_228_0" class="ocr_word" title="bbox 465 1468 714 1511">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἀναλυτιχά.</ins>
+            <ins class="alt" title="nlp 2.00">Ἀναλυτικά.</ins>
+          </span>
+        </span>
+        <span id="w_228_1" class="ocr_word" title="bbox 465 1468 714 1511">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_229" class="ocr_word" title="bbox 776 1478 857 1505" lang="grc">
@@ -1223,11 +1227,6 @@
         <span id="w_236" class="ocr_word" title="bbox 1726 1459 1851 1499" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φωναὶ</ins>
-          </span>
-        </span>
-        <span id="w_237" class="ocr_word" title="bbox 1884 1459 2088 1500" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καθολικαί</ins>
           </span>
         </span>
       </span>
@@ -1902,9 +1901,9 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_369" class="ocr_word" title="bbox 1986 2222 2096 2275" lang="grc">
+        <span id="w_369_0" class="ocr_word" title="bbox 1986 2222 2096 2275">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀναγχαίου·</ins>
+            <ins class="alt" title="nlp 2.00">ἀναγκαίου·</ins>
           </span>
         </span>
       </span>
@@ -2090,14 +2089,24 @@
             <ins class="alt" title="nlp 1.00">1</ins>
           </span>
         </span>
-        <span id="w_406_0" class="ocr_word" title="bbox 390 2639 445 2661">
+        <span id="w_406_0_0" class="ocr_word" title="bbox 390 2639 445 2661">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_406_1" class="ocr_word" title="bbox 390 2639 445 2661">
+        <span id="w_406_0_1" class="ocr_word" title="bbox 390 2639 445 2661">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χαταντ.—ὁμολογούμενον</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_406_1_0" class="ocr_word" title="bbox 390 2639 445 2661">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καταντ.—ὁμολογούμενον</ins>
+          </span>
+        </span>
+        <span id="w_406_1_1" class="ocr_word" title="bbox 390 2639 445 2661">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_407" class="ocr_word" title="bbox 956 2631 1022 2654">
@@ -2153,17 +2162,6 @@
             <ins class="alt" title="nlp 1.00">ὡς</ins>
           </span>
         </span>
-        <span id="w_417" class="ocr_word" title="bbox 1999 2624 2065 2648">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">om.</ins>
-            <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_418" class="ocr_word" title="bbox 2091 2613 2123 2647" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Κ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 345 2671 2171 2731">
         <span id="w_419" class="ocr_word" title="bbox 345 2690 430 2731">
@@ -2204,9 +2202,14 @@
             <ins class="alt" title="nlp 1.00">εἰ</ins>
           </span>
         </span>
-        <span id="w_426" class="ocr_word" title="bbox 1117 2688 1197 2711" lang="grc">
+        <span id="w_426_0" class="ocr_word" title="bbox 1117 2688 1197 2711">
           <span class="alternatives">
-            <ins title="nlp 2.00">δὲ—διχαιώτηρια</ins>
+            <ins class="alt" title="nlp 2.00">δὲ—δικαιώτηρια</ins>
+          </span>
+        </span>
+        <span id="w_426_1" class="ocr_word" title="bbox 1117 2688 1197 2711">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_427" class="ocr_word" title="bbox 1447 2687 1514 2710">
@@ -2229,11 +2232,6 @@
         <span id="w_430" class="ocr_word" title="bbox 1779 2671 2013 2717" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δικαζόμενον]</ins>
-          </span>
-        </span>
-        <span id="w_431" class="ocr_word" title="bbox 2039 2671 2171 2710">
-          <span class="alternatives">
-            <ins title="nlp 2.00">διχάζον</ins>
           </span>
         </span>
       </span>
@@ -2298,14 +2296,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_443" class="ocr_word" title="bbox 1687 2744 1876 2778" lang="grc">
+        <span id="w_443_0" class="ocr_word" title="bbox 1687 2744 1876 2778">
           <span class="alternatives">
-            <ins title="nlp 2.00">προνοητὴς—διχαστής</ins>
+            <ins class="alt" title="nlp 2.00">προνοητὴς—δικαστής</ins>
           </span>
         </span>
-        <span id="w_444" class="ocr_word" title="bbox 2122 2729 2170 2772">
+        <span id="w_443_1" class="ocr_word" title="bbox 1687 2744 1876 2778">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">(8)</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2590,7 +2588,7 @@
         </span>
         <span id="w_496" class="ocr_word" title="bbox 2020 2963 2171 3013">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐδείχθη]</ins>
+            <ins title="nlp 2.00"/>
           </span>
         </span>
       </span>
