--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0421.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0421.html
@@ -985,7 +985,7 @@
         </span>
         <span id="w_188" class="ocr_word" title="bbox 1602 1556 1686 1611" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_189" class="ocr_word" title="bbox 1719 1573 1829 1597" lang="grc">
@@ -1260,7 +1260,7 @@
         </span>
         <span id="w_241" class="ocr_word" title="bbox 992 1906 1051 1954" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins title="nlp 2.00">(τὸ</ins>
           </span>
         </span>
         <span id="w_242" class="ocr_word" title="bbox 1088 1903 1161 1958" lang="grc">
@@ -1508,7 +1508,7 @@
         </span>
         <span id="w_291" class="ocr_word" title="bbox 1109 2178 1299 2232" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐνταῦθα</ins>
+            <ins title="nlp 2.00">(ἐνταῦθα</ins>
           </span>
         </span>
         <span id="w_292" class="ocr_word" title="bbox 1339 2177 1410 2232" lang="grc">
@@ -2557,14 +2557,14 @@
             <del title="nlp 0.90">lit.</del>
           </span>
         </span>
-        <span id="w_488" class="ocr_word" title="bbox 1544 3164 1592 3200">
+        <span id="w_488_0" class="ocr_word" title="bbox 1544 3164 1592 3200">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 2</ins>
+            <ins class="alt" title="nlp 2.00">V2</ins>
           </span>
         </span>
-        <span id="w_489" class="ocr_word" title="bbox 1758 3163 1909 3208" lang="grc">
+        <span id="w_488_1" class="ocr_word" title="bbox 1544 3164 1592 3200">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀνομοιομερῶς</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
