--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0377.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0377.html
@@ -1159,7 +1159,7 @@
         </span>
         <span id="w_222_0" class="ocr_word" title="bbox 386 1468 516 1521">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ω&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">#x772;</ins>
           </span>
         </span>
         <span id="w_222_1" class="ocr_word" title="bbox 386 1468 516 1521">
@@ -2403,7 +2403,7 @@
         </span>
         <span id="w_458" class="ocr_word" title="bbox 1229 2853 1301 2895" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ</ins>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_459" class="ocr_word" title="bbox 1321 2852 1403 2895">
