--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0461.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0461.html
@@ -562,19 +562,19 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_104" class="ocr_word" title="bbox 1276 1153 1563 1209" lang="grc">
+        <span id="w_104_0" class="ocr_word" title="bbox 1276 1153 1563 1209">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾Ηραχλείτεια·</ins>
+            <ins class="alt" title="nlp 2.00">Ἡρακλείτεια·</ins>
+          </span>
+        </span>
+        <span id="w_104_1" class="ocr_word" title="bbox 1276 1153 1563 1209">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_105" class="ocr_word" title="bbox 1602 1170 1721 1195" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ταῦτα</ins>
-          </span>
-        </span>
-        <span id="w_106" class="ocr_word" title="bbox 1751 1170 1821 1208" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
       </span>
@@ -619,14 +619,14 @@
             <ins class="alt" title="nlp 1.00">συγγραμμάτων</ins>
           </span>
         </span>
-        <span id="w_115" class="ocr_word" title="bbox 1398 1218 1650 1277" lang="grc">
+        <span id="w_115_0" class="ocr_word" title="bbox 1398 1218 1650 1277">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾Ηραχλείτου</ins>
+            <ins class="alt" title="nlp 2.00">Ἡρακλείτου</ins>
           </span>
         </span>
-        <span id="w_116" class="ocr_word" title="bbox 1673 1239 1822 1277" lang="grc">
+        <span id="w_115_1" class="ocr_word" title="bbox 1398 1218 1650 1277">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἴρηται</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -877,9 +877,14 @@
             <ins class="alt" title="nlp 2.00">῾</ins>
           </span>
         </span>
-        <span id="w_164_1" class="ocr_word" title="bbox 1245 1498 1326 1539">
+        <span id="w_164_1_0" class="ocr_word" title="bbox 1245 1498 1326 1539">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_164_1_1" class="ocr_word" title="bbox 1245 1498 1326 1539">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_165" class="ocr_word" title="bbox 1358 1513 1452 1552" lang="grc">
@@ -895,11 +900,6 @@
         <span id="w_167" class="ocr_word" title="bbox 1623 1500 1686 1540" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_168" class="ocr_word" title="bbox 1717 1513 1821 1539" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἐνσεσαγμένον’</ins>
           </span>
         </span>
       </span>
@@ -2085,9 +2085,14 @@
             <ins class="alt" title="nlp 1.00">13</ins>
           </span>
         </span>
-        <span id="w_391" class="ocr_word" title="bbox 760 2860 953 2906" lang="grc">
+        <span id="w_391_0" class="ocr_word" title="bbox 760 2860 953 2906">
           <span class="alternatives">
-            <ins title="nlp 2.00">χολυβητοῦ</ins>
+            <ins class="alt" title="nlp 2.00">κολυβητοῦ</ins>
+          </span>
+        </span>
+        <span id="w_391_1" class="ocr_word" title="bbox 760 2860 953 2906">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_392" class="ocr_word" title="bbox 982 2862 1009 2895">
@@ -2125,12 +2130,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">in</ins>
             <del title="nlp 0.90">in</del>
-          </span>
-        </span>
-        <span id="w_399" class="ocr_word" title="bbox 1806 2871 1888 2904">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mrg.</ins>
-            <del title="nlp 0.90">mrg.</del>
           </span>
         </span>
       </span>
